--- a/index/_bookdown.yml
+++ b/index/_bookdown.yml
@@ -1,5 +1,12 @@
-book_filename: "thesis"
+book_filename: "Thesis"
 chapter_name: "Chapter "
-rmd_files: ["index.Rmd", "01-chap1.Rmd", "02-chap2.Rmd", "03-chap3.Rmd", "04-conclusion.Rmd", "05-appendix.Rmd", "99-references.Rmd"]
-download: [["thesis.pdf", "PDF"], ["thesis.epub", "EPUB"], ["thesis.docx", "Word"]]
+rmd_files: 
+    - "index.Rmd"
+    - "01-chap1.Rmd"
+    - "02-chap2.Rmd"
+    - "04-Results.Rmd"
+    - "05-conclusion.Rmd"
+    - "06-appendix.Rmd"
+    - "99-references.Rmd"
+download: [["thesis.pdf", "PDF"], ["thesis.docx", "Word"]]
 delete_merged_file: true
